# crs_ros1

./: crs.rosinstall
crs_motion_execution/: CMakeLists.txt  package.xml
crs_motion_execution/config/: ME_config.yaml
crs_motion_execution/src/: compliance_trajectory_server.cpp
crs_robot_comms/: CMakeLists.txt  package.xml
crs_robot_comms/src/: robot_comms_server.cpp
crs_support/: CMakeLists.txt  package.xml
crs_support/config/: ur10e_controllers.yaml
crs_support/launch/: crs_startup.launch  ur10e_upload.launch  ur_common.launch  ur_control.launch
crs_support/urdf/: assembly_table.xacro  crs.urdf.xacro  robotiq_gripper.xacro  workcell.urdf.xacro
