<?xml version="1.0"?>
<package format="2">
  <name>crs_motion_execution</name>
  <version>0.0.0</version>
  <description>The force_controlled_trajectory package</description>
  <maintainer email="tylermarr17@gmail.com">ros-industrial</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <depend>roscpp</depend>
  <depend>cartesian_trajectory_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>controller_manager_msgs</depend>

</package>
