<?xml version="1.0"?>
<package format="2">
  <name>crs_robot_comms</name>
  <version>0.0.0</version>
  <description>The UR roobot communication package for crs</description>
  <maintainer email="tylermarr17@gmail.com">ros-industrial</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>ur_dashboard_msgs</depend>
  <depend>ur_msgs</depend>

</package>
